--- a/src/css/MainContent/Home/List/List.css
+++ b/src/css/MainContent/Home/List/List.css
@@ -1,11 +1,11 @@
 /* List */
 .list-container{
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    width: 60%;
+    width: 100%;
+    height: 100%;
 }
 .list-header{
     display: flex;
@@ -13,7 +13,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    border-bottom: 1px solid black;
+}
+.list-content-container{
+    width: 100%;
 }
 
 /* List Item */
