--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
 .app-container{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
+}
+
+/* Small Horizontal Spacer */
+.small-spacer{
+  width: 0.5em;
 }
