--- a/src/css/MainContent/Home/Header.css
+++ b/src/css/MainContent/Home/Header.css
@@ -1,5 +1,7 @@
+/* Home */
 .home-header-container{
     height: 10em;
+    width: 70%;
     margin-bottom: 2em;
     display: flex;
     flex-direction: row;
@@ -9,6 +11,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
     width: 10em;
+    border: 1px solid black;
+}
+.home-header-content{
+    position: relative;
+    width: 100%;
+}
+#home-header-time{
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 1em;
+    margin-left: 1em;
+}
+#home-header-plan{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 1em;
+    margin-right: 1em;
 }
