--- a/src/css/MainContent/Home/Home.css
+++ b/src/css/MainContent/Home/Home.css
@@ -3,3 +3,8 @@
     width: 100%;
     height: 100%;
 }
+.home-content{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
