--- a/src/css/MainContent/Home/List/List.css
+++ b/src/css/MainContent/Home/List/List.css
@@ -4,8 +4,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 60%;
 }
 .list-header{
     display: flex;
@@ -16,13 +15,51 @@
 }
 .list-content-container{
     width: 100%;
+    height: 35em;
+    overflow-y: auto;
 }
 
 /* List Item */
-.list-item-container{
+.list-item-header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     width: 100%;
+}
+.list-item-actions{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.list-item-content-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.list-item-created{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: flex-start;
+}
+
+/* Sublist Item */
+.sublist-item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1em 2em;
+}
+.sublist-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.sublist-actions{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
