--- a/src/css/SideBar/SideBar.css
+++ b/src/css/SideBar/SideBar.css
@@ -42,7 +42,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    border-right: 1px solid black;
-    height: 100vh;
+    height: 100%;
     width: 20em;
+    border: 1px solid black;
 }
