--- a/src/css/SideBar/SideBar.css
+++ b/src/css/SideBar/SideBar.css
@@ -2,9 +2,14 @@
 .header-container{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
+}
+.header-logo-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 /* Avatar */
@@ -44,5 +49,5 @@
     justify-content: flex-start;
     height: 100%;
     width: 20em;
-    border: 1px solid black;
+    border-right: 1px solid black;
 }
