--- a/src/css/SideBar/SideBar.css
+++ b/src/css/SideBar/SideBar.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding: 0 1em;
 }
 .header-logo-container{
     display: flex;
