--- a/src/css/MainContent/Home/Header.css
+++ b/src/css/MainContent/Home/Header.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     width: 10em;
-    border: 1px solid black;
+    background-color: #EAECEE;
 }
 .home-header-content{
     position: relative;
