--- a/src/css/MainContent/MainContent.css
+++ b/src/css/MainContent/MainContent.css
@@ -7,6 +7,8 @@
     left: 20em;
     overflow-y: auto;
     overflow-x: hidden;
+    background-color: #566573;
+    color: white;
 }
 
 /* Content Titles */
