--- a/src/css/SideBar/SideBar.css
+++ b/src/css/SideBar/SideBar.css
@@ -26,7 +26,7 @@
     width: 12em;
     height: 12em;
     border-radius: 50%;
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 /* Menu Item */
@@ -36,12 +36,11 @@
     align-items: center;
     margin: 1em;
     width: 10em;
-    border: 1px solid black;
-    color: black;
+    color: whitesmoke;
 }
 .menu-item:hover{
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
 }
 .menu-item-title{
     margin-left: 5px;
@@ -59,5 +58,6 @@
     top: 0;
     left: 0;
     bottom: 0;
-    border-right: 1px solid black;
+    background-color: #17202A;
+    color: whitesmoke;
 }
