--- a/src/css/MainContent/Home/List/List.css
+++ b/src/css/MainContent/Home/List/List.css
@@ -5,6 +5,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 60%;
+    margin-bottom: 5em;
 }
 #list-header{
     display: flex;
@@ -15,7 +16,7 @@
 }
 .list-content-container{
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow-y: auto;
 }
 #list-add-btn{
