--- a/src/css/MainContent/Lists/Lists.css
+++ b/src/css/MainContent/Lists/Lists.css
@@ -2,7 +2,6 @@
 #list-grid{
     margin-top: 2em;
     width: 100%;
-    height: 44em;
     display: flex;
     justify-content: space-between;
     align-content: space-between;
@@ -57,6 +56,8 @@
     flex: 0 0 25%;
     height: 20em;
     max-width: 22em;
+    min-width: 22em;
+    margin: 1em;
 }
 .list-header{
     display: flex;
