--- a/src/css/MainContent/Home/Complete/Complete.css
+++ b/src/css/MainContent/Home/Complete/Complete.css
@@ -6,12 +6,16 @@
 #complete-header{
     text-align: center;
     padding: 0.5em;
+    color: whitesmoke;
 }
 .complete-list-container{
     width: 100%;
     height: 20em;
     overflow-y: auto;
     overflow-x: hidden;
+}
+#complete-header-container{
+    background-color: #EC7063;
 }
 
 /* Complete Item */
