--- a/src/css/MainContent/Lists/Lists.css
+++ b/src/css/MainContent/Lists/Lists.css
@@ -57,7 +57,8 @@
     height: 20em;
     max-width: 22em;
     min-width: 22em;
-    margin: 1em;
+    margin-top: 1em;
+    margin-left: 1em;
 }
 .list-header{
     display: flex;
