shared data b/w List and Complete component

--- a/src/css/MainContent/Home/Complete/Complete.css
+++ b/src/css/MainContent/Home/Complete/Complete.css
@@ -30,6 +30,11 @@
     flex-direction: row;
     align-items: baseline;
 }
+.complete-item-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 /* SubComplete Item */
 .subcomplete-item{
