--- a/src/css/MainContent/Home/List/List.css
+++ b/src/css/MainContent/Home/List/List.css
@@ -31,6 +31,11 @@
     justify-content: space-between;
     width: 100%;
 }
+.list-item-header-title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 .list-item-actions{
     display: flex;
     flex-direction: row;
