--- a/src/css/MainContent/Lists/Lists.css
+++ b/src/css/MainContent/Lists/Lists.css
@@ -59,13 +59,14 @@
     min-width: 22em;
     margin-top: 1em;
     margin-left: 1em;
+    overflow-y: hidden;
 }
 .list-header{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 18em;
+    min-height: 18em;
     width: 100%;
     cursor: default;
 }
@@ -74,7 +75,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 2em;
+    min-height: 2em;
     width: 100%;
     border-top: 1px solid #c7c7c7;
 }
@@ -88,4 +89,47 @@
     width: 25px;
     height: 25px;
     border-radius: 50%;
+}
+
+/* List Item Info */
+.list-item-info{
+    padding: 1em;
+    width: 100%;
+    min-height: 20em;
+    background-color: white;
+}
+.list-item-info[slide='1']{
+    animation: slideUp 0.2s linear 1 forwards;
+}
+.list-item-info[slide='0']{
+    animation: slideDown 0.2s linear 1 forwards;
+}
+.list-info-item{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    padding-left: 1em;
+}
+.list-info-priority{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+.list-item-info-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.list-item-info-close{
+    cursor: pointer;
+    color: #EC7063;
+}
+
+@keyframes slideUp{
+    100%{ transform: translateY(-100%); }
+}
+@keyframes slideDown{
+    0%{ transform: translateY(-100%); }
+    100%{ transform: translateY(0%); }
 }
