--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@
 .small-spacer{
   width: 0.5em;
 }
+
+/* Horizontal Spacer */
+.horizontal-spacer{
+  width: 1em;
+}
+
+/* Vertical Spacer */
+.vertical-spacer{
+  height: 1em;
+}
