--- a/src/css/MainContent/MainContent.css
+++ b/src/css/MainContent/MainContent.css
@@ -15,3 +15,14 @@
 .content-title{
     font-size: 32pt;
 }
+
+/* Empty Container */
+.empty-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 14pt;
+}
