--- a/src/css/MainContent/About/About.css
+++ b/src/css/MainContent/About/About.css
@@ -4,3 +4,24 @@
     margin-left: 2em;
     width: 60%;
 }
+
+@media(max-width: 600px){
+    #about-content{
+        width: 90%;
+    }
+}
+@media(max-width: 428px){
+    #about-content{
+        margin-left: 1em;
+    }
+}
+@media(max-width: 300px){
+    .content-title{
+        font-size: 18pt;
+    }
+}
+@media(max-width: 250px){
+    #about-content{
+        margin-left: 0;
+    }
+}
