--- a/src/css/MainContent/Home/Header.css
+++ b/src/css/MainContent/Home/Header.css
@@ -1,7 +1,7 @@
 /* Home */
 .home-header-container{
     height: 10em;
-    width: 70%;
+    width: 70em;
     margin-bottom: 2em;
     display: flex;
     flex-direction: row;
@@ -33,4 +33,29 @@
     margin-bottom: 1em;
     margin-right: 1em;
     cursor: pointer;
+}
+
+@media(max-width: 1504px){
+    .home-header-container{
+        width: 100%;
+    }
+}
+@media(max-width: 578px){
+    .home-header-container{
+        flex-direction: column;
+        height: 18em;
+    }
+    .home-header-calendar{
+        width: 100%;
+        height: 8em;
+    }
+}
+@media(max-width: 300px){
+    #home-header-time{
+        margin-left: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        text-align: center;
+    }
 }
