--- a/src/css/MainContent/Home/List/List.css
+++ b/src/css/MainContent/Home/List/List.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 60%;
+    min-width: 60em;
     margin-bottom: 5em;
 }
 #list-header{
@@ -35,12 +35,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-.list-item-actions{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    cursor: pointer;
+    width: 75%;
 }
 .list-item-action-row{
     display: flex;
@@ -65,6 +60,11 @@
 .list-item-btn{
     width: 10em;
 }
+.list-item-priority{
+    min-width: 25px;
+    height: 25px;
+    border-radius: 50%;
+}
 
 /* Sublist Item */
 .sublist-item{
@@ -83,4 +83,71 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+@media(max-width: 1858px){
+    .list-container{
+        width: 100%;
+        min-width: unset;
+        margin-bottom: 2em;
+    }
+}
+@media(max-width: 750px){
+    .list-item-header{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .list-item-actions{
+        margin-top: 1em;
+    }
+    .list-item-header-title{
+        width: 100%;
+    }
+    .list-item-action-row{
+        justify-content: flex-start;
+    }
+    .list-item-content-header{
+        flex-direction: column-reverse;
+    }
+}
+@media(max-width: 500px){
+    .sublist-item{
+        margin: 1em 0;
+    }
+    #list-header{
+        flex-direction: column;
+    }
+    .list-item-btn{
+        width: 100%;
+    }
+    .list-item-header-title{
+        margin-bottom: 1em;
+    }
+    .list-item-header-title > h3{
+        font-size: 18pt;
+    }
+}
+@media(max-width: 350px){
+    #list-header > h1{
+        font-size: 22pt;
+    }
+    .list-item-header-title > h3{
+        font-size: 16pt;
+        width: 100%;
+        text-align: center;
+    }
+    .list-item-header-title{
+        flex-direction: column;
+        align-items: center;
+    }
+    .list-item-priority{
+        width: 100%;
+        border-radius: 15px;
+        margin-bottom: 0.5em;
+    }
+}
+@media(max-width: 300px){
+    .list-item-header-title > h3{
+        font-size: 14pt;
+    }
 }
