--- a/src/css/MainContent/Settings/Settings.css
+++ b/src/css/MainContent/Settings/Settings.css
@@ -1,6 +1,7 @@
 /* Settings */
 #settings-container{
     margin-top: 2em;
+    max-width: 45em;
 }
 
 /* Settings Section */
@@ -14,5 +15,24 @@
 }
 .settings-subcontent{
     padding: 1em;
-    width: 50%;
+    width: 100%;
+}
+
+@media(max-width: 500px){
+    .settings-subcontent{
+        padding: 1em 0;
+    }
+}
+@media(max-width: 364px){
+    .settings-content{
+        padding: 1em 0;
+    }
+}
+@media(max-width: 300px){
+    .settings-section > h3{
+        font-size: 16pt;
+    }
+    .settings-content > h4{
+        font-size: 16pt;
+    }
 }
