--- a/src/css/SideBar/SideBar.css
+++ b/src/css/SideBar/SideBar.css
@@ -66,6 +66,7 @@
 /* Login */
 .login-container{
     padding: 2em;
+    max-width: 45em;
 }
 .login-content{
     margin-top: 2em;
@@ -73,6 +74,7 @@
 /* Register */
 .register-container{
     padding: 2em;
+    max-width: 45em;
 }
 .register-content{
     margin-top: 2em;
@@ -86,4 +88,90 @@
 }
 .redirect-link:hover{
     text-decoration: none;
+}
+
+@media(max-width: 906px){
+    .sidebar-container{
+        width: 15em;
+    }
+}
+@media(max-width: 750px){
+    .sidebar-container{
+        width: 10em;
+    }
+    .avatar{
+        margin-top: 1em;
+    }
+    .avatar > img{
+        height: 5em;
+        width: 5em;
+    }
+    .avatar > h2{
+        font-size: 16pt;
+    }
+    .menu-container{
+        padding: 1em;
+    }
+    .login-container{
+        padding: 1em;
+    }
+}
+@media(max-width: 600px){
+    .sidebar-container{
+        width: 5em;
+    }
+    .avatar > img{
+        height: 2.5em;
+        width: 2.5em;
+    }
+    .avatar > h2{
+        font-size: 14pt;
+        text-align: center;
+    }
+    .menu-container{
+        padding: 0em;
+    }
+    .header-container{
+        padding: 0;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .menu-container{
+        padding: 0;
+    }
+    .menu-btn-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .menu-item{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .menu-item-title{
+        display: none;
+    }
+}
+@media(max-width: 420px){
+    .login-container{
+        padding: 0;
+    }
+    .register-container{
+        padding: 0;
+    }
+}
+@media(max-width: 260px){
+    .login-content > h4{
+        font-size: 14pt;
+    }
+    .login-container > h2{
+        font-size: 18pt;
+    }
+    .register-container > h2{
+        font-size: 18pt;
+    }
+    .register-content > h4{
+        font-size: 14pt;
+    }
 }
