added delete tasks in complete component functionality

--- a/src/css/MainContent/Home/Complete/Complete.css
+++ b/src/css/MainContent/Home/Complete/Complete.css
@@ -44,6 +44,9 @@
     display: flex;
     flex-direction: column;
 }
+.complete-clear-btn{
+    width: 100%;
+}
 
 /* SubComplete Item */
 .subcomplete-item{
