--- a/src/css/MainContent/Settings/Settings.css
+++ b/src/css/MainContent/Settings/Settings.css
@@ -3,6 +3,9 @@
     margin-top: 2em;
     max-width: 45em;
 }
+.settings-main-container{
+    cursor: default;
+}
 
 /* Settings Section */
 .settings-section{
